# imgnow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  imgnow.sln
clipbuild/: clipbuild.vcxproj
icon/: icon.cpp  icon.h  png_to_array.py
imgnow/: CMakeLists.txt  app.cpp  app.h  colourfmt.cpp  colourfmt.h  config.cpp  config.h  icon.cpp  icon.h  image.cpp  image.h  imgnow.vcxproj  imgnow.vcxproj.filters  main.cpp  net.cpp  net.h  window.cpp  window.h
